--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
         <h1><a href="index.html"><img class="logo" src="img/header_icon (1).png" alt="ページTOP"></a></h1>
         <nav>
           <ul class="main-nav">
-            <li><a href="news.html">ニュース</a></li>
+            <li><a href="index.html">Top</a></li>
             <li><a href="menu.html">飼育一覧</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
